# AgentV1

./: README.md  main.py  pyproject.toml
chains/: 1_chains.py  2_chains_extending_functionality.py  3_chains_parallel.py  4_chains_branch.py
chat_models/: 1_ollama_chatmodel_conversation_with_user.py  2_ollama_chatmodel_history_firebase.py
promp_templates/: 1_promp_template
